# battlebot-sim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.bat
.github/workflows/: build-windows.yml  ci.yml  release.yml
battlebot_sim/: __init__.py  __main__.py  _bootstrap.py  config.py  errors.py  logging_setup.py  validation.py  viz.py
battlebot_sim/arena/: __init__.py
battlebot_sim/damage/: __init__.py  braces.py  fields.py  model.py  structural.py
battlebot_sim/materials/: __init__.py  assign.py  library.py
battlebot_sim/mesh/: __init__.py  brace_detect.py  segment.py
battlebot_sim/report/: export.py
battlebot_sim/sim/: __init__.py  battery.py  engine.py  mjcf.py  recorder.py
battlebot_sim/ui/: charts.py  main_window.py  pacing.py  panels.py  viewport.py
docs/: index.md  model_assumptions.md  sensitivity.md  uncertainty.md
gauntlet/: __init__.py  __main__.py  viz.py
gauntlet/report/: export.py  verdict.py
gauntlet/sim/: battery.py  strike.py
gauntlet/ui/: freeplay_view.py  main_window.py  panels.py  splash.py  viewport.py
scripts/: run_isolated_tests.ps1  sensitivity_sweep.py
tests/: conftest.py  helpers.py  test_brace_detect.py  test_config.py  test_damage.py  test_engine.py  test_fields.py  test_golden_selftest.py  test_logging_setup.py  test_materials.py  test_mesh.py  test_mjcf.py  test_pacing.py  test_recorder.py  test_report.py  test_sim.py  test_strike_freeplay.py  test_ui_smoke.py  test_validation.py  test_viz_select.py
tests/data/: golden_selftest.json
tests/validation/: test_brace_transfer.py  test_convergence.py  test_energy_conservation.py  test_hertzian.py  test_structural.py  test_true_peak.py
